# django-portfolio

./: .replit  FUNDING.yml  README.md  main.py  manage.py  pyproject.toml  requirements.txt  start.py
.github/: FUNDING.yml
.upm/: store.json
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_rename_socialmedia_webdata_socialmedias.py  0003_remove_skill_image.py  0004_auto_20211028_1308.py  0005_auto_20211028_1309.py  0006_auto_20211028_1311.py  0007_auto_20211028_1315.py  0008_alter_contactformdata_time.py  0009_delete_contactformdata.py  0010_contactformdata.py  0011_rename_time_contactformdata_timestamp.py  0012_config.py  0013_auto_20211028_2125.py  0014_alter_contactformdata_message.py
main/templates/main/: index.html
static/main/scripts/: main.js
vishal/: asgi.py  settings.py  urls.py  wsgi.py
