[tool.poetry]
name = "repl_python3_vishal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.13"
discord-webhook = "^0.14.0"
django-admin-interface = "^0.17.3"
django-jazzmin = "^2.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
